# persuasion

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: __init__.py  run_simulation.py
src/: __init__.py
src/agents/: __init__.py  moderator.py  speaker.py
src/graph/: __init__.py  belief_network.py  templates.py
src/models/: __init__.py  belief_graph.py  conversation.py  persona.py
src/nudge/: __init__.py  analyzer.py  interventions.py  strategies.py
src/orchestration/: __init__.py  nodes.py  state.py  workflow.py
src/output/: __init__.py  generator.py  strategy.py
src/personas/: __init__.py  templates.py
src/tracking/: __init__.py  memory.py  stance_tracker.py
tests/: __init__.py  conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_belief_graph.py  test_nudge_analyzer.py  test_persona.py
